--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -90,15 +90,15 @@ text-align: center;
 .container_table{
     border: 7px groove rgb(248, 225, 46);
     padding: 50px;
-    width: 50%;
-    margin: 60px 300px;
+    width: 70%;
+    margin: 60px 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 table {
     background-color: rgb(253, 253, 253);
-    text-align: left;
+    text-align: center;
 }
 th, td {
     padding: 20px;
@@ -125,6 +125,21 @@ section {
     margin: 30px 50px;
     padding: 6px;
     background-color: rgb(30, 202, 214);
+}
+.sections_game {
+    color: rgb(0, 0, 0);
+    width: 50%;
+    margin: 60px 220px;
+    padding: 50px;
+    border: 7px groove rgb(248, 225, 46);
+    border-radius: 10%;
+    background-color: rgb(30, 202, 214);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.maps {
+    border: 2px solid rgb(30, 202, 214);
 }
 .list_game {
     list-style-type: none;
@@ -165,4 +180,58 @@ ul {
     display: flex;
     margin-left: auto;
     margin-right: auto;
+}
+.conteiner_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 50px;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    width: 60%;
+    background-color:rgb(30, 202, 214);
+    padding: 20px;
+}
+fieldset {
+    padding: 12px;
+}
+.street {
+    width: 400px;
+}
+.birth_date_and_gender {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.grade {
+    display: flex;
+    justify-content: space-around;
+}
+.closest_school {
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-around;
+}
+.position {
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-around;
+}
+.uniform {
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-around;
+}
+.terms_and_conditions {
+    list-style-type: none;
+    padding: 20px;
+}
+.condition {
+    padding:20px ;
+}
+.buttons {
+    width: 200px;
 }
